[package]
name = "mp4_splitter"
version = "0.1.0"
authors = ["Аркадий Четвертановский <chetvertanovskiy@trueconf.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte_buffer = { git = "https://github.com/ork821/byte_buffer" }